# Resume

./: .gitignore  CapitalWriter.cs  HtmlWriter.cs  Main.hs  Program.cs  README.md  Resume.cabal  Resume.csproj  Resume.sln  ResumeWriter.cs  Visitor.cs  capital.dhall  capital.scss  cover.dhall  cover.scss  hie.yaml  package-lock.json  package.json  resume.dhall  resume.scss
.github/workflows/: static.yml
src/: capital.css  capital.dhall  capital.toml  contact.dhall  defence.md  resume.css  resume.dhall  resume.toml
src/capital/: certifications.dhall  databases.dhall  education.dhall  frameworks.dhall  knowledge.dhall  languages.dhall  methodologies.dhall  package.dhall  scholarships.dhall  tools.dhall
src/capital/companies/: demonware.dhall  helmOperations.dhall  latitude.dhall  package.dhall  uvicCivil.dhall  xplor.dhall
src/capital/projects/: blog.dhall  finances.dhall  package.dhall  rentBuy.dhall  resume.dhall
src/common/: databases.dhall  frameworks.dhall  jobTitles.dhall  languages.dhall  methodologies.dhall  package.dhall  technologies.dhall  tools.dhall
src/html/: package.dhall
src/resume/: employment.dhall  equipment.dhall
src/style/: cover.less  resume.font.less  resume.layout.less  resume.less
src/types/: Contact.dhall  ContactAccount.dhall  Databases.dhall  FrameworkType.dhall  Frameworks.dhall  KnowledgeLevel.dhall  Languages.dhall  Methodologies.dhall  Month.dhall  Period.dhall  PeriodDate.dhall  Resume.dhall  Technologies.dhall  Tools.dhall  Usage.dhall
src/types/capital/: Certification.dhall  Date.dhall  Degree.dhall  Job.dhall  (+5 more)
(+12 files in other folders)
