cabal-version:       2.4
name:                Resume
version:             0.1.0.0
license:             NONE

executable Resume
  default-language:    Haskell2010
  main-is:             Main.hs
  build-depends:       base >=4.12.0.0
                      , dhall >=1.39.0
                      , shake-dhall
                      , shake

